welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:18: error: expected class or object definition
def positionFinale():Boolean = {
^Diagonal:27: error: expected start of definition
	override def forward(i:Int)  { 
                 ^Diagonal:30: error: expected start of definition
	override def forward()  {
                 ^Diagonal:33: error: expected start of definition
	override def backward(i:Int) {
                 ^Diagonal:36: error: expected start of definition
	override def backward() {
                 ^Diagonal:39: error: Unmatched closing brace '}' ignored here
}
^